css/style.css
/* ... */
/* main ui
 */
   .dark-area {
      background-color: #111; /* fallback */
      background-color: rgba(5,5,5,0.85);
      background-image: url(../img/bg-dark.png);
      color: #f0f0f0; /* fallback */
      color: rgb(240,240,240);
   }
   .light-area {
      background-color: #fff; /* fallback */
      background-color: rgba(255,255,255,0.75);
   }
   .txt-green, .txt-green:link, .txt-green:visited {
      color: #42c574; /* fallback */
      color: rgb(66,197,116);
   }
   .txt-red, .txt-red:link, .txt-red:visited {
      color: #f95165; /* fallback */
      color: rgb(249, 81, 101);
   }
   .txt-blue, .txt-blue:link, .txt-blue:visited {
      color: #3363db; /* fallback */ 
      color: rgb(51, 99, 219);
   }
   .txt-white:link, .txt-white:visited {
      color: #f0f0f0; /* fallback */
      color: rgb(240,240,240);
   }
   .brand:hover, .brand:active {
      color: #f0f0f0; /* fallback */
      color: rgb(240,240,240);
   }
   .txt-white:hover, .txt-white:active {
      color: #42c574; /* fallback */
      color: rgb(66,197,116);
   }

   .symbol {
      font-size: 14rem;
      line-height: 0.75;
      margin: 24px 0 0;
      margin: 1.5rem 0 0;
      padding: 0;
      display: block;
      /*-webkit-transform: rotateY(0deg);
         -moz-transform: rotateY(0deg);
              transform: rotateY(0deg);
      -webkit-transition: -webkit-transform 0.437s ease-out;
            -moz-transition: -moz-transform 0.337s ease-out;
                      transition: transform 0.437s ease-out;
      -webkit-perspective: 400;*/
   }
   /*.animated {
      -webkit-transform: rotateY(180deg);
         -moz-transform: rotateY(180deg);
              transform: rotateY(180deg);
   }*/
   .icon {
      position: relative;
   }
   .icon:before {
      content: attr(data-icon);
      line-height: 28px;
      line-height: 1.75rem;
      font-size: 1.35em;
      position: absolute;
      left: -1.65em;
      width: 1em;
      text-align: center;
      font-family: serif;
   }
   .icon.flipped:before {
      -webkit-transform: rotate(180deg);
         -moz-transform: rotate(180deg);
          -ms-transform: rotate(180deg);
              transform: rotate(180deg);
   }

/*
 * 7. media queries
 ============================================================
 ============================================================
 */

   @media all and (max-width: 1074px) {
      html {
         font-size: 87.5%; /* 14px */
      }       
      .page, section[role="main"] {
         margin-left: 24em;
      }
      .anchor-panel .gamma {
         line-height: 1.5;
      }
   }

   @media all and (max-height: 720px) {
      .anchor-panel .gamma {
         padding-top: 0;
      }
   }

   @media all and (max-height: 840px) {
      html {
         font-size: 87.5%; /* 14px */
      }
   }

   @media all and (max-width: 1366px) {
      .page.extended {
         margin-left: 27em;
      }
      .anchor-panel .gamma {
         margin-bottom: 0.5rem;
      }  
   }

   /*@media only screen and (min-width: 320px) {
       
   }

   @media only screen and (min-width: 480px) {
       
   }

   @media only screen and (min-width: 768px) {
       
   }

   @media only screen and (min-width: 1024px) {

   }*/



/*
 * 8. utilities
 ============================================================
 ============================================================
 */

/* clearfix via @necolas
 * http://nicolasgallagher.com/micro-clearfix-hack
 */   .cf:before, .cf:after { content: ""; display: table; }
      .cf:after { clear: both; }
      .cf { zoom: 1; }

/* nicolas' badass background-image opacity
 * http://nicolasgallagher.com/css-background-image-hacks
 */   .bg:before {
         content: "";
         position: absolute;
         z-index: -3;
         width: 100%;
         height: 100%;
         top: 0; 
         left: 0;
         opacity: 0.5;
         background: url(../img/bg.jpg) repeat;
      }

/* baseline grid
 */   .grid { /* using :target allows browsing to the hashtag and activating the grid (http://example.com#grid) */
         z-index: 1000;
         background: 
            -webkit-linear-gradient(rgba(47,88,190,0.05) 1px, transparent 1px), 
            -webkit-linear-gradient(rgba(47,88,190,0.2) 1px, transparent 1px), 
            -webkit-linear-gradient(left, rgba(47,88,190,0.05) 1px, transparent 1px), 
            -webkit-linear-gradient(left, rgba(47,88,190,0.2) 1px, transparent 1px);
         background: 
            -moz-linear-gradient(rgba(47,88,190,0.05) 1px, transparent 1px), 
            -moz-linear-gradient(rgba(47,88,190,0.2) 1px, transparent 1px), 
            -moz-linear-gradient(left, rgba(47,88,190,0.05) 1px, transparent 1px), 
            -moz-linear-gradient(left, rgba(47,88,190,0.2) 1px, transparent 1px);
         background-size: 1.5rem 1.5rem;
      }
      .gridder {
         position: absolute;
         top: 0;
         right: 1.5rem;
         opacity: 0.25;
      }
      .gridder:after {
         content: "grid";
         text-transform: uppercase;
         font-size: 1rem;
         font-weight: 700;
         display: block;
         text-align: center;
         font-family: "myriad-pro", "Helvetica Neue", Helvetica, Helmet, Freesans, sans-serif;
      }

/* typekit fout-buster via @jonikorpi
 * http://jonikorpi.com/a-smoother-page-load
 */   .wf-active {
         opacity: 1;
         -webkit-transition: opacity 0.24s ease-in-out;
         -moz-transition: opacity 0.24s ease-in-out;
         transition: opacity 0.24s ease-in-out;
      }
      .wf-loading {
         opacity: 0;
      }

